# LLM-engine

./: CMakeLists.txt  CMakeLists_release.txt  README.md  user_entry.cpp
src/: CMakeLists.txt
src/kernels/: CMakeLists.txt  build_causal_mask.cu  build_causal_mask.cuh  cal_padding_offset.cu  cal_padding_offset.cuh  cublas_utils.cu  cublas_utils.cuh  input_embedding.cu  input_embedding.cuh  input_embedding.h  linear.cu  linear.cuh  qkv_bias_rope.cu  qkv_bias_rope.cuh  rmsnorm.cu  rmsnorm.cuh
src/models/llama/: llama_params.h
src/utils/: macro.h  string_utils.h  tensor.h  vectorize.h
src/weights/: CMakeLists.txt  base_weights.h
src/weights/llama/: attention_weights.h  embedding_weights.h  norm_weights.h
tests/unittests/: CMakeLists.txt  build_causal_mask_test.cu  cal_padding_offset_test.cu  linear_test.cu  load_embeddings_test.cu  qkv_bias_rope_test.cu  rmsnorm_test.cu  tensor_test.cpp
