add_library(load_embeddings STATIC input_embedding.cu)
set_property(TARGET load_embeddings PROPERTY CUDA_SEPARABLE_COMPILATION   ON)
set_property(TARGET load_embeddings PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET load_embeddings PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
target_include_directories(load_embeddings PRIVATE ${CMAKE_SOURCE_DIR})

add_library(cal_padding_offset STATIC cal_padding_offset.cu)
set_property(TARGET cal_padding_offset PROPERTY CUDA_SEPARABLE_COMPILATION   ON)
set_property(TARGET cal_padding_offset PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET cal_padding_offset PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
target_include_directories(cal_padding_offset PRIVATE ${CMAKE_SOURCE_DIR})

add_library(rmsnorm STATIC rmsnorm.cu)
set_property(TARGET rmsnorm PROPERTY CUDA_SEPARABLE_COMPILATION   ON)
set_property(TARGET rmsnorm PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET rmsnorm PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
target_include_directories(rmsnorm PRIVATE ${CMAKE_SOURCE_DIR})